src/modules/PostFeed/Post/Post.module.css
.post {
  display: flex;
  flex-direction: column;
  gap: 12px;
  width: 100%;
  height: 100%;
}

.header {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-size: 13px;
  line-height: 16px;
  gap: 27px;
}

.profile {
  display: flex;
  align-items: center;
  gap: 10px;
}

.profileInfo {
  display: flex;
  align-items: center;
  gap: 6px;
  color: #8e8e8e;
}

.username {
  font-weight: 600;
  color: #262626;
}

.timeAgo {
  font-size: 12px;
}

.follow {
  color: #0095f6;
  font-weight: 600;
  text-decoration: none;
}

.imageWrapper {
  width: 100%;
  line-height: 0;
}

.postImage {
  width: 100%;
  max-width: 403.097px;
  height: auto;
  max-height: 503.871px;
  object-fit: cover;
  border-radius: 4px;
}

.actions {
  display: flex;
  gap: 14px;
  margin-top: 4px;
}

.commentIcon {
  margin-top: 1px;
}

.likes {
  font-weight: 600;
  color: #262626;
  font-size: 14px;
}

.caption {
  display: flex;
  gap: 4px;
  align-items: baseline;
}

.captionTitle {
  font-weight: 400;
  color: #262626;
}

.captionBody {
  display: flex;
  gap: 6px;
  color: #262626;
  font-size: 14px;
}

.moreButton {
  border: none;
  background: transparent;
  color: #8e8e8e;
  font-weight: 600;
  cursor: pointer;
  padding: 0;
}

.comments {
  color: #8e8e8e;
  text-decoration: none;
  font-size: 14px;
  display: block;
  width: 100%;
  padding-bottom: 14px;
  margin-top: auto;
  border-bottom: 0.861px solid #dbdbdb;
}

